// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Header /> rendering should render sticky msg and close it on clicking close-btn 1`] = `
<Fragment>
  <div
    className="header-container"
  >
    <div
      className="header-row-1"
    >
      <div
        className="header-row-1-inner"
      >
        <div
          className="header-left"
        >
          <div
            className="header-logo-div"
          >
            <Link
              to="/default"
            >
              <img
                alt="openwisp"
                className="header-logo-image"
                src="/assets/default/openwisp-logo-black.svg"
              />
            </Link>
          </div>
        </div>
        <div
          className="header-right"
        >
          <div
            className="desktop-languages"
          >
            <button
              className="active header-language-btn header-desktop-language-btn header-language-btn-en"
              key="en"
              onClick={[Function]}
              type="button"
            >
              english
            </button>
            <button
              className="header-language-btn header-desktop-language-btn header-language-btn-it"
              key="it"
              onClick={[Function]}
              type="button"
            >
              italian
            </button>
          </div>
          <div
            aria-label="Menu Button"
            className="header-hamburger"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="header-row-2 mobile-hidden"
    >
      <div
        className="header-unified-nav header-mobile-menu"
      >
        <a
          className="header-link header-link-1 button"
          href="link-1/"
          key="link-1/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-1
        </a>
        <a
          className="header-link header-link-2 button"
          href="link-2/"
          key="link-2/"
          rel="noreferrer noopener"
          target="_blank"
        >
          link-2
        </a>
        <div
          className="mobile-languages-row"
        >
          <button
            className="active header-language-btn header-desktop-language-btn header-language-btn-en"
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-desktop-language-btn header-language-btn-it"
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sticky-container"
    role="banner"
  >
    <div
      className="inner"
    >
      <div
        className="sticky-msg"
        dangerouslySetInnerHTML={
          {
            "__html": <p>
              announcement
            </p>,
          }
        }
      />
      <button
        className="close-sticky-btn"
        onClick={[Function]}
        type="button"
      >
        ✖
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`<Header /> rendering should render with links 1`] = `
<div
  className="header-container"
>
  <div
    className="header-row-1"
  >
    <div
      className="header-row-1-inner"
    >
      <div
        className="header-left"
      >
        <div
          className="header-logo-div"
        >
          <a
            href="/default"
            onClick={[Function]}
          >
            <img
              alt="openwisp"
              className="header-logo-image"
              src="/assets/default/openwisp-logo-black.svg"
            />
          </a>
        </div>
      </div>
      <div
        className="header-right"
      >
        <div
          className="desktop-languages"
        >
          <button
            className="active header-language-btn header-desktop-language-btn header-language-btn-en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-desktop-language-btn header-language-btn-it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
        <div
          aria-label="Menu Button"
          className="header-hamburger"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="header-row-2 mobile-hidden"
  >
    <div
      className="header-unified-nav header-mobile-menu"
    >
      <a
        className="header-link header-link-1 button"
        href="link-1/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-1
      </a>
      <a
        className="header-link header-link-2 button"
        href="link-2/"
        rel="noreferrer noopener"
        target="_blank"
      >
        link-2
      </a>
      <div
        className="mobile-languages-row"
      >
        <button
          className="active header-language-btn header-desktop-language-btn header-language-btn-en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn header-desktop-language-btn header-language-btn-it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering should render without links 1`] = `
<div
  className="header-container"
>
  <div
    className="header-row-1"
  >
    <div
      className="header-row-1-inner"
    >
      <div
        className="header-left"
      >
        <div
          className="header-logo-div"
        >
          <a
            href="/default"
            onClick={[Function]}
          >
            <img
              alt="openwisp"
              className="header-logo-image"
              src="/assets/default/openwisp-logo-black.svg"
            />
          </a>
        </div>
      </div>
      <div
        className="header-right"
      >
        <div
          className="desktop-languages"
        >
          <button
            className="active header-language-btn header-desktop-language-btn header-language-btn-en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-desktop-language-btn header-language-btn-it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
        <div
          aria-label="Menu Button"
          className="header-hamburger"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="header-row-2 mobile-hidden"
  >
    <div
      className="header-unified-nav header-mobile-menu"
    >
      <div
        className="mobile-languages-row"
      >
        <button
          className="active header-language-btn header-desktop-language-btn header-language-btn-en"
          onClick={[Function]}
          type="button"
        >
          english
        </button>
        <button
          className="header-language-btn header-desktop-language-btn header-language-btn-it"
          onClick={[Function]}
          type="button"
        >
          italian
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Header /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<Fragment>
  <div
    className="header-container"
  >
    <div
      className="header-row-1"
    >
      <div
        className="header-row-1-inner"
      >
        <div
          className="header-left"
        >
          <div
            className="header-logo-div"
          >
            <Link
              to="/default"
            >
              <img
                alt="openwisp"
                className="header-logo-image"
                src="/assets/default/openwisp-logo-black.svg"
              />
            </Link>
          </div>
        </div>
        <div
          className="header-right"
        >
          <div
            className="desktop-languages"
          >
            <button
              className="active header-language-btn header-desktop-language-btn header-language-btn-en"
              key="en"
              onClick={[Function]}
              type="button"
            >
              english
            </button>
            <button
              className="header-language-btn header-desktop-language-btn header-language-btn-it"
              key="it"
              onClick={[Function]}
              type="button"
            >
              italian
            </button>
          </div>
          <div
            aria-label="Menu Button"
            className="header-hamburger"
            onClick={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={0}
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="header-row-2 mobile-hidden"
    >
      <div
        className="header-unified-nav header-mobile-menu"
      >
        <a
          className="header-link header-link-1 button"
          href="/{orgSlug}/login"
          key="/{orgSlug}/login"
          rel="noreferrer noopener"
          target="_blank"
        >
          Sign In
        </a>
        <a
          className="header-link header-link-2 button"
          href="/{orgSlug}/registration"
          key="/{orgSlug}/registration"
          rel="noreferrer noopener"
          target="_blank"
        >
          Sign Up
        </a>
        <div
          className="mobile-languages-row"
        >
          <button
            className="active header-language-btn header-desktop-language-btn header-language-btn-en"
            key="en"
            onClick={[Function]}
            type="button"
          >
            english
          </button>
          <button
            className="header-language-btn header-desktop-language-btn header-language-btn-it"
            key="it"
            onClick={[Function]}
            type="button"
          >
            italian
          </button>
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
